--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.5-alpha.3",
     "keen-slider": "^6.8.6",
     "next": "14.2.4",
     "react": "^18",
