--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "app/blog/page"
+    "app/blog/page.tsx"
   ],
   "exclude": ["node_modules"]
 }
