--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@phosphor-icons/react": "^2.1.5-alpha.3",
+    "@phosphor-icons/react": "^2.1.7",
     "keen-slider": "^6.8.6",
     "next": "14.2.4",
     "react": "^18",
@@ -20,6 +20,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/tailwindcss": "^3.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
