--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@phosphor-icons/react": "^2.1.7",
     "keen-slider": "^6.8.6",
     "next": "14.2.4",
+    "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/tailwindcss": "^3.1.0",
