--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
     "keen-slider": "^6.8.6",
-    "next": "14.2.4",
+    "next": "^14.2.19",
     "nodemailer": "^6.9.16",
+    "phosphor-react": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
