--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
+    "fs": "^0.0.1-security",
     "keen-slider": "^6.8.6",
     "next": "^14.2.19",
-    "nodemailer": "^6.9.16",
+    "nodemailer": "^6.10.0",
     "phosphor-react": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
